--- a/addmachine-detail.html
+++ b/addmachine-detail.html
@@ -23,7 +23,7 @@
             <form role="form" class="form-horizontal" id="leftForm">
               <div class="panel-group">
                 <div class="panel panel-default">
-                  <div class="panel-heading"><h4>进件审核</h4></div>
+                  <div class="panel-heading"><h4>加机审核</h4></div>
                   <div class="panel-body">
                     <table class="table table-strip table-hover xgd-cancel-pad-margin">
                       <tr>
@@ -82,8 +82,6 @@
                             </div>
                           </div>
                         </div>
-                        
-
                         <div class="col-md-7">
                           <div class="form-group">
                             <label class="col-sm-4 control-label">商户名称:</label>
