--- a/deposit-detail.html
+++ b/deposit-detail.html
@@ -23,7 +23,7 @@
             <form role="form" class="form-horizontal" id="leftForm">
               <div class="panel-group">
                 <div class="panel panel-default">
-                  <div class="panel-heading"><h4>进件审核</h4></div>
+                  <div class="panel-heading"><h4>确认押金收取</h4></div>
                   <div class="panel-body">
                     <table class="table table-strip table-hover xgd-cancel-pad-margin">
                       <tr>
