--- a/incheck.html
+++ b/incheck.html
@@ -31,10 +31,6 @@
             <div id="xgd-content-right">
               <form class="form-inline" role="form">
                 <div class="form-group">
-
-
-
-
                   <label>申请日期:</label>
                   <input type="text" class="form-control"  placeholder="开始时间" size="10"  id="dateStart" data-date-format="yyyy-mm-dd">
                   -
@@ -150,55 +146,16 @@
                 </tbody>
               </table>
             </div>
+            <div id="paginator"></div>
             </div>
           </div>
         </div>
       </div>
-
-
-
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="./lib/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="./lib/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
-
-
-    <script type="text/javascript" src="./lib/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="./lib/bootstrap-datetimepicker/locales/bootstrap-datetimepicker.zh-CN.js" charset="UTF-8"></script>
-
-
-
-    <script src="./js/app.js"></script>
     <script type="text/javascript">
       xgd_menu = [0,0,0];
-
-     $('#dateStart').datetimepicker({
-        language:  'zh-CN',
-        weekStart: 1,
-        todayBtn:  1,
-        autoclose: 1,
-        todayHighlight: 1,
-        startView: 2,
-        minView: 2,
-        forceParse: 0
-    });
-
-
-      $('#dateEnd').datetimepicker({
-        language:  'zh-CN',
-        weekStart: 1,
-        todayBtn:  1,
-        autoclose: 1,
-        todayHighlight: 1,
-        startView: 2,
-        minView: 2,
-        forceParse: 0
-    });
-
     </script>
     <!-- scripts by this app -->
     
-
+    <?php require_once "./footer.html"; ?>
   </body>
 </html>
