--- a/menu.html
+++ b/menu.html
@@ -34,8 +34,8 @@
           <li><a href="/supply.html">补全撤机信息</a></li>
           <li><a href="/visitback.html">电话回访</a></li>
           <li><a href="/reuse.html">重新启用</a></li>
-          <li><a href="/oldback.html">确认旧机回收</a></li>
-          <li><a href="/backdoc.html">确认撤机单据</a></li>
+          <li><a href="/recycle.html">确认旧机回收</a></li>
+          <li><a href="/affirmbill.html">确认撤机单据</a></li>
           <li><a href="/cashback.html">退押金审批</a></li>
           <li><a href="/cashcreate.html">生成退款单</a></li>
           <li class="bottom"><a href="/moneyback.html">退押金</a></li>
