--- a/visitback.html
+++ b/visitback.html
@@ -119,8 +119,8 @@
                     <td class="check"> 
                       <input type="checkbox" />
                     </td>
-                    <td><a class="xgd-td-a" href="./check-detail.html" target="_blank">电话回访</a></td>
-                    <td><a class="xgd-td-a" href="./check-detail.html" target="_blank">代理商平台</a></td>
+                    <td><a class="xgd-td-a" href="./visitback-page.html" target="_blank">电话回访</a></td>
+                    <td><a class="xgd-td-a" href="./visitback-page.html" target="_blank">代理商平台</a></td>
                     <td>零交易撤机</td>
                     <td>深圳大成银行</td>
                     <td>--</td>
