--- a/cashcreate.html
+++ b/cashcreate.html
@@ -1,1 +1,224 @@
-生成退款单
+<!DOCTYPE html>
+<html lang="zh-cn">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>XGD-CRM管理信息系统</title>
+
+    <!-- Bootstrap -->
+    <link href="./lib/bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./lib/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <link href="./lib/bootstrap-dialog/css/bootstrap-dialog.min.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body style="overflow:hidden">
+      <?php require_once "./nav.html"; ?>
+      <?php require_once "./location.html"; ?>
+      <div class="container-fluid" id="footnav">
+        <div class="row">
+          <div class="col-md-2" style="padding:0px; margin:0px; margin-left:-15px; background:#3a404e;" >
+            <div class="panel-group table-responsive" role="tablist" id="xgd-content-left">
+              <?php require_once "./menu.html"; ?>
+            </div>
+          </div><!-- col-md-2 END-->
+          <div class="col-md-10" style="padding:0px; margin:0px; padding-top:15px;padding-left:15px; ">
+            <div id="xgd-content-right">
+              <form class="form-inline" role="form" id="brForm" wdlength="0.68">
+              <div class="form-group">
+                <label class="control-label">申请日期:</label>
+                <input type="text" class="form-control input-sm"  placeholder="开始时间" id="dateStart" data-date-format="yyyy-mm-dd">
+                -
+                <input type="text" class="form-control input-sm"  placeholder="结束时间" id="dateEnd" data-date-format="yyyy-mm-dd">
+              </div>
+
+              <div class="form-group xgd-padding-left-10">
+                <label class="control-label">商户名称:</label>
+                <input type="text" class="form-control input-sm"  placeholder="">
+              </div>
+
+              <div class="form-group xgd-padding-left-10">
+                <label class="control-label">业务来源:</label>
+                <input type="text" class="form-control input-sm"  placeholder="">
+              </div>
+
+              <div class="form-group xgd-padding-left-10">
+                <label class="control-label">商户入网类型:</label>
+                <input type="text" class="form-control input-sm"  placeholder="">
+              </div>
+              <div style="height:15px; clear: both; "></div> 
+              <div class="form-group">
+                <label class="control-label">&nbsp;&nbsp;&nbsp;代理商:</label>
+                <input type="text" class="form-control input-sm" size="48"  placeholder="">
+              </div>
+
+              <div class="form-group xgd-padding-left-13">
+                <label class="control-label ">&nbsp;&nbsp;&nbsp;商户号:</label>
+                <input type="text" class="form-control input-sm"  placeholder="">
+              </div>
+
+              <div class="form-group xgd-padding-left-13">
+                <label class="control-label ">&nbsp;&nbsp;&nbsp;终端号:</label>
+                <input type="text" class="form-control input-sm"  placeholder="">
+              </div>
+
+              <div class="form-group xgd-padding-left-40">
+                <label class="control-label ">&nbsp;&nbsp;&nbsp;机身号:</label>
+                <input type="text" class="form-control input-sm"  placeholder="">
+              </div>
+
+              <div class="form-group xgd-padding-left-80">
+                <button class="btn btn-primary">&nbsp;&nbsp;&nbsp;&nbsp;查询&nbsp;&nbsp;&nbsp;&nbsp;</button>
+              </div>
+
+               <div class="form-group xgd-padding-left-40">
+                <button class="btn btn-warning">&nbsp;&nbsp;&nbsp;&nbsp;重置&nbsp;&nbsp;&nbsp;&nbsp;</button>
+              </div>
+
+
+
+
+              <div style="height:15px; clear: both; "></div> 
+              <button type="button" class="btn btn-success">&nbsp;&nbsp;分发任务&nbsp;&nbsp;</button>
+            </form>
+            <div id="tableBox">
+              <table class="table table-striped table-hover table-bordered xgd-margin-top-20 xgd-table">
+                <thead>
+                  <td> 
+                      <div class="checkbox">
+                        <label><input type="checkbox"> &nbsp;&nbsp;全选</label>
+                      </div>
+                  </td>
+                  <td>任务名称</td>
+                  <td>业务来源</td>
+                  <td>撤机类型</td>
+                  <td>商户名称</td>
+                  <td>商户号</td>
+                  <td>终端号</td>
+                  <td>机身号</td>
+                  <td>归属公司</td>
+                  <td>业务员</td>
+                  <td>代理商名称</td>
+                  <td>渠道类型</td>
+                  <td>商户入网类型</td>
+                  <td>快递公司</td>
+                  <td>快递单号</td>
+                  <td>业务申请人</td>
+                  <td>申请时间</td>
+                  <td>当前处理人/机构</td>
+                  <td>备注</td>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="check"> 
+                      <input type="checkbox" />
+                    </td>
+                    <td><a class="xgd-td-a" href="./cashcreate-page.html" target="_blank">生成退款单</a></td>
+                    <td><a class="xgd-td-a" href="./cashcreate-page.html" target="_blank">代理商平台</a></td>
+                    <td>零交易撤机</td>
+                    <td>深圳大成银行</td>
+                    <td>--</td>
+                    <td>--</td>
+                    <td>
+                      <a href="#" class="clientDetail">
+                        <span class="glyphicon glyphicon-chevron-right"></span><span class="glyphicon glyphicon-chevron-right"></span>
+                      </a>
+                    </td>
+                    <td>--</td>
+                    <td class="text-center">--</td>
+                    <td>直营</td>
+                    <td>租赁合同</td>
+                    <td>顺丰</td>
+                    <td>6234567890</td>
+                    <td>--</td>
+                    <td>2016-10-21 09:51:21</td>
+                    <td>--</td>
+                    <td>--</td>
+                    <td>--</td>
+                  </tr>
+                 
+                </tbody>
+              </table>
+            </div>
+            <div id="paginator"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="./lib/jquery/1.11.1/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="./lib/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./lib/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="./lib/bootstrap-datetimepicker/locales/bootstrap-datetimepicker.zh-CN.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="./lib/bootstrap-dialog/js/bootstrap-dialog.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="./lib/bootstrap-paginator/js/bootstrap-paginator.js" charset="UTF-8"></script>
+
+
+   
+    <script type="text/javascript">
+      xgd_menu = [0,2,6];
+
+     $('#dateStart').datetimepicker({
+        language:  'zh-CN',
+        weekStart: 1,
+        todayBtn:  1,
+        autoclose: 1,
+        todayHighlight: 1,
+        startView: 2,
+        minView: 2,
+        forceParse: 0
+    });
+
+
+      $('#dateEnd').datetimepicker({
+        language:  'zh-CN',
+        weekStart: 1,
+        todayBtn:  1,
+        autoclose: 1,
+        todayHighlight: 1,
+        startView: 2,
+        minView: 2,
+        forceParse: 0
+    });
+
+      $(document).ready(function(){
+         var options = {
+            currentPage: 3,
+            totalPages: 10,
+            itemTexts: function (type, page, current) {
+                    switch (type) {
+                    case "first":
+                        return "第一页";
+                    case "prev":
+                        return "上一页";
+                    case "next":
+                        return "下一页";
+                    case "last":
+                        return "最后一页";
+                    case "page":
+                        return page;
+                    }
+                }
+        }
+
+        $('#paginator').bootstrapPaginator(options);
+      })
+    </script>
+    <!-- scripts by this app -->
+    
+    <script src="./js/app.js"></script>
+
+
+  </body>
+</html>
