--- a/index.html
+++ b/index.html
@@ -131,19 +131,6 @@
           </div>
         </div>
       </div>
-
-
-
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="./lib/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="./lib/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
-    <!-- scripts by this app -->
-    
-   <script type="text/javascript">
-    // xgd_menu = [0,0,0];
-   </script>
-    <script src="./js/app.js"></script>
+      <?php require_once "./footer.html"; ?>
   </body>
 </html>
