--- a/nav.html
+++ b/nav.html
@@ -8,7 +8,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-		  <a class="navbar-brand xgd-crm-brand" href="#"></a>
+		  <a class="navbar-brand xgd-crm-brand" href="/"></a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -21,8 +21,6 @@
 		  </ul>
 		</div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
-
-
 
 	  <ul class="nav nav-tabs xgd-nav-two" role="tablist">
 		  <li role="presentation" class="active"><a href="#">客户业务管理</a></li>
