--- a/recycle.html
+++ b/recycle.html
@@ -119,8 +119,8 @@
                     <td class="check"> 
                       <input type="checkbox" />
                     </td>
-                    <td><a class="xgd-td-a" href="./cashback-page.html" target="_blank">退押金审批</a></td>
-                    <td><a class="xgd-td-a" href="./cashback-page.html" target="_blank">代理商平台</a></td>
+                    <td><a class="xgd-td-a" href="./recycle-page.html" target="_blank">确认旧机回收</a></td>
+                    <td><a class="xgd-td-a" href="./recycle-page.html" target="_blank">代理商平台</a></td>
                     <td>零交易撤机</td>
                     <td>深圳大成银行</td>
                     <td>--</td>
@@ -167,7 +167,7 @@
 
    
     <script type="text/javascript">
-      xgd_menu = [0,2,5];
+      xgd_menu = [0,2,3];
 
      $('#dateStart').datetimepicker({
         language:  'zh-CN',
