--- a/remachine.html
+++ b/remachine.html
@@ -63,6 +63,7 @@
                 <input type="text" class="form-control input-sm"  placeholder="">
               </div>
 
+
               <div class="form-group xgd-padding-left-13 zdh">
                 <label class="control-label ">&nbsp;&nbsp;&nbsp;终端号:</label>
                 <input type="text" class="form-control input-sm"  placeholder="">
@@ -70,6 +71,11 @@
 
               <div class="form-group xgd-padding-left-40">
                 <label class="control-label ">&nbsp;&nbsp;&nbsp;机身号:</label>
+                <input type="text" class="form-control input-sm"  placeholder="">
+              </div>
+
+               <div class="form-group xgd-padding-left-40">
+                <label class="control-label ">&nbsp;&nbsp;&nbsp;任务名称:</label>
                 <input type="text" class="form-control input-sm"  placeholder="">
               </div>
 
@@ -102,7 +108,6 @@
                   <td>商户号</td>
                   <td>终端号</td>
                   <td>机身号</td>
-                  <td>白名单类型</td>
                   <td>归属公司</td>
                   <td>业务员</td>
                   <td>代理商名称</td>
@@ -120,8 +125,8 @@
                     <td class="check"> 
                       <input type="checkbox" />
                     </td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">补全撤机信息</a></td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">代理商平台</a></td>
+                    <td><a class="xgd-td-a" href="#" onclick="reStartUse()">重新启用</a></td>
+                    <td><a class="xgd-td-a" href="./check-detail.html" target="_blank">代理商平台</a></td>
                     <td>零交易撤机</td>
                     <td>深圳大成银行</td>
                     <td>--</td>
@@ -131,7 +136,6 @@
                         <span class="glyphicon glyphicon-chevron-right"></span><span class="glyphicon glyphicon-chevron-right"></span>
                       </a>
                     </td>
-                    <td>--</td>
                     <td>--</td>
                     <td class="text-center">--</td>
                     <td>直营</td>
@@ -160,6 +164,32 @@
                       </a>
                     </td>
                     <td>--</td>
+                    <td class="text-center">--</td>
+                    <td>直营</td>
+                    <td>租赁合同</td>
+                    <td>顺丰</td>
+                    <td>6234567890</td>
+                    <td>--</td>
+                    <td>2016-10-21 09:51:21</td>
+                    <td>--</td>
+                    <td>--</td>
+                    <td>--</td>
+                  </tr>
+                  <tr>
+                    <td class="check"> 
+                      <input type="checkbox" />
+                    </td>
+                    <td><a class="xgd-td-a" href="./visitback-page.html" target="_blank">电话回访</a></td>
+                    <td><a class="xgd-td-a" href="./check-detail.html" target="_blank">代理商平台</a></td>
+                    <td>零交易撤机</td>
+                    <td>深圳大成银行</td>
+                    <td>--</td>
+                    <td>--</td>
+                    <td>
+                      <a href="#" class="clientDetail">
+                        <span class="glyphicon glyphicon-chevron-right"></span><span class="glyphicon glyphicon-chevron-right"></span>
+                      </a>
+                    </td>
                     <td>--</td>
                     <td class="text-center">--</td>
                     <td>直营</td>
@@ -176,8 +206,8 @@
                     <td class="check"> 
                       <input type="checkbox" />
                     </td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">补全撤机信息</a></td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">代理商平台</a></td>
+                    <td><a class="xgd-td-a" href="./recycle-page.html" target="_blank">确认旧机回收</a></td>
+                    <td><a class="xgd-td-a" href="./recycle-page.html" target="_blank">代理商平台</a></td>
                     <td>零交易撤机</td>
                     <td>深圳大成银行</td>
                     <td>--</td>
@@ -187,7 +217,6 @@
                         <span class="glyphicon glyphicon-chevron-right"></span><span class="glyphicon glyphicon-chevron-right"></span>
                       </a>
                     </td>
-                    <td>--</td>
                     <td>--</td>
                     <td class="text-center">--</td>
                     <td>直营</td>
@@ -204,8 +233,8 @@
                     <td class="check"> 
                       <input type="checkbox" />
                     </td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">补全撤机信息</a></td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">代理商平台</a></td>
+                    <td><a class="xgd-td-a" href="./remachine-page.html" target="_blank">确认撤机单据</a></td>
+                    <td><a class="xgd-td-a" href="./remachine-page.html" target="_blank">代理商平台</a></td>
                     <td>零交易撤机</td>
                     <td>深圳大成银行</td>
                     <td>--</td>
@@ -215,7 +244,6 @@
                         <span class="glyphicon glyphicon-chevron-right"></span><span class="glyphicon glyphicon-chevron-right"></span>
                       </a>
                     </td>
-                    <td>--</td>
                     <td>--</td>
                     <td class="text-center">--</td>
                     <td>直营</td>
@@ -232,8 +260,8 @@
                     <td class="check"> 
                       <input type="checkbox" />
                     </td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">补全撤机信息</a></td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">代理商平台</a></td>
+                    <td><a class="xgd-td-a" href="./cashback-page.html" target="_blank">退押金审批</a></td>
+                    <td><a class="xgd-td-a" href="./cashback-page.html" target="_blank">代理商平台</a></td>
                     <td>零交易撤机</td>
                     <td>深圳大成银行</td>
                     <td>--</td>
@@ -243,7 +271,6 @@
                         <span class="glyphicon glyphicon-chevron-right"></span><span class="glyphicon glyphicon-chevron-right"></span>
                       </a>
                     </td>
-                    <td>--</td>
                     <td>--</td>
                     <td class="text-center">--</td>
                     <td>直营</td>
@@ -260,8 +287,8 @@
                     <td class="check"> 
                       <input type="checkbox" />
                     </td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">补全撤机信息</a></td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">代理商平台</a></td>
+                    <td><a class="xgd-td-a" href="./cashcreate-page.html" target="_blank">生成退款单</a></td>
+                    <td><a class="xgd-td-a" href="./cashcreate-page.html" target="_blank">代理商平台</a></td>
                     <td>零交易撤机</td>
                     <td>深圳大成银行</td>
                     <td>--</td>
@@ -271,7 +298,6 @@
                         <span class="glyphicon glyphicon-chevron-right"></span><span class="glyphicon glyphicon-chevron-right"></span>
                       </a>
                     </td>
-                    <td>--</td>
                     <td>--</td>
                     <td class="text-center">--</td>
                     <td>直营</td>
@@ -288,8 +314,8 @@
                     <td class="check"> 
                       <input type="checkbox" />
                     </td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">补全撤机信息</a></td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">代理商平台</a></td>
+                    <td><a class="xgd-td-a" href="./moneyback-page.html" target="_blank">退押金</a></td>
+                    <td><a class="xgd-td-a" href="./moneyback-page.html" target="_blank">代理商平台</a></td>
                     <td>零交易撤机</td>
                     <td>深圳大成银行</td>
                     <td>--</td>
@@ -299,195 +325,6 @@
                         <span class="glyphicon glyphicon-chevron-right"></span><span class="glyphicon glyphicon-chevron-right"></span>
                       </a>
                     </td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td class="text-center">--</td>
-                    <td>直营</td>
-                    <td>租赁合同</td>
-                    <td>顺丰</td>
-                    <td>6234567890</td>
-                    <td>--</td>
-                    <td>2016-10-21 09:51:21</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                  </tr>
-                  <tr>
-                    <td class="check"> 
-                      <input type="checkbox" />
-                    </td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">补全撤机信息</a></td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">代理商平台</a></td>
-                    <td>零交易撤机</td>
-                    <td>深圳大成银行</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>
-                      <a href="#" class="clientDetail">
-                        <span class="glyphicon glyphicon-chevron-right"></span><span class="glyphicon glyphicon-chevron-right"></span>
-                      </a>
-                    </td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td class="text-center">--</td>
-                    <td>直营</td>
-                    <td>租赁合同</td>
-                    <td>顺丰</td>
-                    <td>6234567890</td>
-                    <td>--</td>
-                    <td>2016-10-21 09:51:21</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                  </tr>
-                  <tr>
-                    <td class="check"> 
-                      <input type="checkbox" />
-                    </td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">补全撤机信息</a></td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">代理商平台</a></td>
-                    <td>零交易撤机</td>
-                    <td>深圳大成银行</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>
-                      <a href="#" class="clientDetail">
-                        <span class="glyphicon glyphicon-chevron-right"></span><span class="glyphicon glyphicon-chevron-right"></span>
-                      </a>
-                    </td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td class="text-center">--</td>
-                    <td>直营</td>
-                    <td>租赁合同</td>
-                    <td>顺丰</td>
-                    <td>6234567890</td>
-                    <td>--</td>
-                    <td>2016-10-21 09:51:21</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                  </tr>
-                  <tr>
-                    <td class="check"> 
-                      <input type="checkbox" />
-                    </td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">补全撤机信息</a></td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">代理商平台</a></td>
-                    <td>零交易撤机</td>
-                    <td>深圳大成银行</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>
-                      <a href="#" class="clientDetail">
-                        <span class="glyphicon glyphicon-chevron-right"></span><span class="glyphicon glyphicon-chevron-right"></span>
-                      </a>
-                    </td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td class="text-center">--</td>
-                    <td>直营</td>
-                    <td>租赁合同</td>
-                    <td>顺丰</td>
-                    <td>6234567890</td>
-                    <td>--</td>
-                    <td>2016-10-21 09:51:21</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                  </tr>
-                  <tr>
-                    <td class="check"> 
-                      <input type="checkbox" />
-                    </td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">补全撤机信息</a></td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">代理商平台</a></td>
-                    <td>零交易撤机</td>
-                    <td>深圳大成银行</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>
-                      <a href="#" class="clientDetail">
-                        <span class="glyphicon glyphicon-chevron-right"></span><span class="glyphicon glyphicon-chevron-right"></span>
-                      </a>
-                    </td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td class="text-center">--</td>
-                    <td>直营</td>
-                    <td>租赁合同</td>
-                    <td>顺丰</td>
-                    <td>6234567890</td>
-                    <td>--</td>
-                    <td>2016-10-21 09:51:21</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                  </tr>
-                  <tr>
-                    <td class="check"> 
-                      <input type="checkbox" />
-                    </td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">补全撤机信息</a></td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">代理商平台</a></td>
-                    <td>零交易撤机</td>
-                    <td>深圳大成银行</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>
-                      <a href="#" class="clientDetail">
-                        <span class="glyphicon glyphicon-chevron-right"></span><span class="glyphicon glyphicon-chevron-right"></span>
-                      </a>
-                    </td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td class="text-center">--</td>
-                    <td>直营</td>
-                    <td>租赁合同</td>
-                    <td>顺丰</td>
-                    <td>6234567890</td>
-                    <td>--</td>
-                    <td>2016-10-21 09:51:21</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                  </tr>
-                   <tr>
-                    <td class="check"> 
-                      <input type="checkbox" />
-                    </td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">补全撤机信息</a></td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">代理商平台</a></td>
-                    <td>零交易撤机</td>
-                    <td>深圳大成银行</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td class="text-center">--</td>
-                    <td>直营</td>
-                    <td>租赁合同</td>
-                    <td>顺丰</td>
-                    <td>6234567890</td>
-                    <td>--</td>
-                    <td>2016-10-21 09:51:21</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                  </tr>
-                   <tr>
-                    <td class="check"> 
-                      <input type="checkbox" />
-                    </td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">补全撤机信息</a></td>
-                    <td><a class="xgd-td-a" href="./supply-page.html" target="_blank">代理商平台</a></td>
-                    <td>零交易撤机</td>
-                    <td>深圳大成银行</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
                     <td>--</td>
                     <td class="text-center">--</td>
                     <td>直营</td>
@@ -511,11 +348,9 @@
 
 
 <script type="text/javascript">
-  xgd_menu = [0,2,0];
+  xgd_menu = [0,2];
 </script>
 <!-- scripts by this app -->
-
   <?php require_once "footer.html"; ?>
-
   </body>
 </html>
